--- a/css/hoot/modules/_global.scss
+++ b/css/hoot/modules/_global.scss
@@ -362,3 +362,8 @@ input[type=text], textarea {
 .show-newline {
     white-space: pre;
 }
+
+.small-dropdown {
+    height: 145px;
+    overflow-y: auto;
+}
